--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "express-session": "1.15.3",
     "express-status-monitor": "0.1.9",
     "express-validator": "3.2.0",
+    "exports-loader": "0.6.4",
     "fakerator": "0.3.0",
     "glob": "7.1.2",
     "hashids": "1.1.1",
@@ -93,6 +94,7 @@
     "slug": "0.9.1",
     "snyk": "^1.30.1",
     "socket.io-client": "2.0.2",
+    "tracking":"1.1.3",
     "uuid-token-generator": "1.0.0",
     "vue-material": "^0.7.1",
     "winston": "2.3.1",
