Added animate css

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "author": "Przemek",
   "license": "MIT",
   "dependencies": {
+    "animate.css" : "3.5.2",
     "async": "2.4.1",
     "axios": "0.16.1",
     "bcrypt-nodejs": "0.0.3",
