--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "axios": "0.16.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.17.2",
+    "bootstrap": "3.3.7",
     "chalk": "1.1.3",
     "cli-table2": "0.2.0",
     "clui": "0.3.1",
