--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "author": "Przemek",
   "license": "MIT",
   "dependencies": {
-    "animate.css" : "3.5.2",
+    "animate.css": "3.5.2",
     "async": "2.4.1",
     "axios": "0.16.1",
     "bcrypt-nodejs": "0.0.3",
@@ -50,13 +50,13 @@
     "cookie-session": "^2.0.0-beta.2",
     "cross-env": "5.0.0",
     "csurf": "1.9.0",
+    "exports-loader": "0.6.4",
     "express": "4.15.3",
     "express-flash": "0.0.2",
     "express-list-endpoints": "3.0.0",
     "express-session": "1.15.3",
     "express-status-monitor": "0.1.9",
     "express-validator": "3.2.0",
-    "exports-loader": "0.6.4",
     "fakerator": "0.3.0",
     "glob": "7.1.2",
     "hashids": "1.1.1",
@@ -96,7 +96,7 @@
     "slug": "0.9.1",
     "snyk": "^1.30.1",
     "socket.io-client": "2.0.2",
-    "tracking":"1.1.3",
+    "tracking": "1.1.3",
     "uuid-token-generator": "1.0.0",
     "vue-material": "^0.7.1",
     "winston": "2.3.1",
@@ -105,7 +105,8 @@
     "winston-loggly-bulk": "1.4.2",
     "winston-logsene": "1.2.1",
     "winston-logzio": "1.0.3",
-    "winston-papertrail": "1.0.5"
+    "winston-papertrail": "1.0.5",
+    "ws": "^3.0.0"
   },
   "devDependencies": {
     "apollo-client": "1.2.2",
