--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "dtt-poc",
   "version": "0.9.0",
+  "engines" : {
+	"node" : "6.10.2"
+  },
   "title": "dtt-poc",
   "description": "Express NodeJS application server boilerplate with Mongo and VueJS",
   "main": "server/index.js",
@@ -8,6 +11,7 @@
     "build": "webpack --progress --colors --config build/webpack.prod.config.js",
     "build:server": "webpack --progress --colors --config build/webpack.server.config.js",
     "dev": "cross-env NODE_ENV=development nodemon --debug",
+    "heroku-postbuild": "webpack --progress --colors --config build/webpack.prod.config.js", 
     "start": "cross-env NODE_ENV=production node server/index.js",
     "start:bundle": "cross-env NODE_ENV=production node server/bundle.js",
     "test:unit": "cross-env NODE_ENV=test mocha --require babel-core/register --reporter spec tests/unit",
